[package]
name = "fusabi-host"
version = "0.1.0"
edition = "2021"
rust-version = "1.75"
description = "Shared host/runtime utilities for Fusabi across Scarab/Tolaria/Hibana/Phage"
license = "MIT OR Apache-2.0"
repository = "https://github.com/fusabi-lang/fusabi-host"
documentation = "https://docs.rs/fusabi-host"
readme = "README.md"
keywords = ["fusabi", "scripting", "runtime", "host", "sandbox"]
categories = ["development-tools", "api-bindings", "concurrency"]

[features]
default = ["serde-support"]
serde-support = ["dep:serde", "dep:serde_json"]
async-runtime-tokio = ["dep:tokio"]
async-runtime-async-std = ["dep:async-std"]
metrics-prometheus = ["dep:prometheus"]

[dependencies]
thiserror = "1.0"
parking_lot = "0.12"
crossbeam-channel = "0.5"
tracing = "0.1"
base64 = "0.22"

# Optional dependencies
serde = { version = "1.0", features = ["derive"], optional = true }
serde_json = { version = "1.0", optional = true }
tokio = { version = "1.0", features = ["rt-multi-thread", "sync", "time"], optional = true }
async-std = { version = "1.12", optional = true }
prometheus = { version = "0.13", optional = true }

[dev-dependencies]
tokio = { version = "1.0", features = ["rt-multi-thread", "macros", "time"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tracing-subscriber = "0.3"

[[example]]
name = "basic_host"
required-features = ["serde-support"]

[[example]]
name = "engine_pool"
required-features = ["serde-support"]

[[example]]
name = "sandbox_config"
required-features = ["serde-support"]
